step progress changed

--- a/gradle.properties
+++ b/gradle.properties
@@ -25,10 +25,9 @@ android.enableJetifier=true
 
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
-
-GROUP=kr.co.prnd
+GROUP=com.ozan.components
 POM_ARTIFACT_ID=stepprogressbar
-VERSION_NAME=1.0.1
+VERSION_NAME=1.0.0
 
 POM_NAME=StepProgressBar
 POM_PACKAGING=aar
@@ -36,15 +35,14 @@ POM_PACKAGING=aar
 POM_DESCRIPTION=StepProgressBar is progressBar for easy display steps
 POM_INCEPTION_YEAR=2021
 
-POM_URL=https://github.com/PRNDcompany/StepProgressBar
-POM_SCM_URL=https://github.com/PRNDcompany/StepProgressBar
-POM_SCM_CONNECTION=scm:git:git://github.com/PRNDcompany/StepProgressBar.git
-POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/PRNDcompany/StepProgressBar.git
+POM_URL=https://github.com/bahacan19/StepProgressBar
+POM_SCM_URL=https://github.com/bahacan19/StepProgressBar
+POM_SCM_CONNECTION=scm:git:git://github.com/bahacan19/StepProgressBar.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/bahacan19/StepProgressBar.git
 
 POM_LICENCE_NAME=The Apache Software License, Version 2.0
 POM_LICENCE_URL=https://www.apache.org/licenses/LICENSE-2.0.txt
 POM_LICENCE_DIST=repo
-
-POM_DEVELOPER_ID=prnd
-POM_DEVELOPER_NAME=PRND
-POM_DEVELOPER_URL=https://github.com/PRNDcompany
+POM_DEVELOPER_ID=bahacan19
+POM_DEVELOPER_NAME=BAHA
+POM_DEVELOPER_URL=https://github.com/bahacan19
