--- a/stepprogressbar/src/main/AndroidManifest.xml
+++ b/stepprogressbar/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="kr.co.prnd.stepprogressbar" />
+    package="com.ozan.progress.stepprogressbar" />
